--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6"
   }
 }
